--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
         <title>Encriptador</title>
     </head>
     <body>
+        <div>
+            <img src="imagenes/Logo.png" class="logo-principal">
+        </div>
+        <br>
+        <div>
+            <input type="text">
+        </div>
+  
     </body>
 </html>
