agregando logo input button y rectangulo

--- a/index.html
+++ b/index.html
@@ -12,9 +12,31 @@
             <img src="imagenes/Logo.png" class="logo-principal">
         </div>
         <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        
+
         <div>
-            <input type="text">
+            <form>
+                <input type="text" id="texto1" placeholder="Ingrese el texto aqui">
+                <div>
+                    <button type="submit" class="button" value="Encriptar">Encriptar</button>
+                    <button type="submit" class="button" value="Desencriptar">Desencriptar</button>
+                </div>
+            </form>
         </div>
-  
+
+        <div class="rectangulo">
+            <img src="imagenes/Muñeco.svg">
+
+            <input type="text" placeholder="Ningún mensaje fue encontrado">
+            <br>
+            <input type="text" placeholder="Ingresa el texto que desees encriptar o desencriptar">
+            <!--<p>Ingresa el texto que desees encriptar o desencriptar</p>-->
+        </div>
+
     </body>
 </html>
