agregando medias querys para ser responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="rectangulo" >
-            <textarea name="textarearesultado" id="resultado" cols="22" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea name="textarearesultado" id="resultado" cols="22" rows="10"></textarea>
 
             <div id="elementosinicio">
             
